--- a/src/main/resources/templates/admin/coupon/couponEdit.html
+++ b/src/main/resources/templates/admin/coupon/couponEdit.html
@@ -8,7 +8,7 @@
       data-assets-path="/admin/assets/"
       data-template="vertical-menu-template-free"
 >
-<head th:replace="~{admin/fragments/head :: heads(pageTitle='Edit Coupon')}">
+<head th:replace="~{admin/fragments/head :: heads(pageTitle='Coupon')}">
     <title></title>
 </head>
 <style>
@@ -34,7 +34,7 @@
         <aside th:replace="~{admin/fragments/menu :: drawer-menu(value_menu = 'coupon,couponList')}"></aside>
         <div class="layout-page">
             <!-- Nav-bar -->
-            <nav th:replace="~{admin/fragments/nav :: nav-bar(value_title = 'Edit Coupon')}"></nav>
+            <nav th:replace="~{admin/fragments/nav :: nav-bar(value_title = 'Coupon / Cập nhật')}"></nav>
 
             <!-- / Navbar -->
 
@@ -43,7 +43,6 @@
                 <!-- Content -->
 
                 <div class="container-xxl flex-grow-1 container-p-y">
-                    <h4 class="fw-bold py-3 mb-4"><span class="text-muted fw-light">Coupon/</span>Edit Coupon</h4>
 
                     <!-- Basic Layout -->
                     <div class="row">
@@ -53,86 +52,86 @@
                                     <form th:object="${couponForm}" th:action="@{'/admin/coupon/edit/' + ${couponForm.id}}" method="post" id="couponForm">
 
                                         <div class="mb-3">
-                                            <label class="form-label" for="couponCode">Coupon Code</label>
+                                            <label class="form-label" for="couponCode">Mã giảm giá*</label>
                                             <input type="text"
                                                    class="form-control"
                                                    id="couponCode"
                                                    th:field="${couponForm.couponCode}"
-                                                   placeholder="Coupon Code"
+                                                   placeholder="Mã giảm giá"
                                                    th:class="${#fields.hasErrors('couponCode')}? 'form-control fieldError' : 'form-control'"
                                                    maxlength="20"/>
                                             <p th:if="${#fields.hasErrors('couponCode')}" th:errors="*{couponCode}" th:errorclass="errorMessage">
-                                                This entry is required
+                                                Đây là trường bắt buộc
                                             </p>
                                         </div>
 
                                         <div class="mb-3">
-                                            <label class="form-label" for="couponName">Coupon Name</label>
+                                            <label class="form-label" for="couponName">Tên mã*</label>
                                             <input type="text"
                                                    class="form-control"
                                                    id="couponName"
                                                    th:field="${couponForm.couponName}"
-                                                   placeholder="Coupon name"
+                                                   placeholder="Tên mã"
                                                    th:class="${#fields.hasErrors('couponName')}? 'form-control fieldError' : 'form-control'"
                                                    maxlength="30"/>
                                             <p th:if="${#fields.hasErrors('couponName')}" th:errors="*{couponName}" th:errorclass="errorMessage">
-                                                This entry is required
+                                                Đây là trường bắt buộc
                                             </p>
                                         </div>
 
                                         <div class="mb-3">
-                                            <label class="form-label" for="couponDescription">Description</label>
+                                            <label class="form-label" for="couponDescription">Mô tả</label>
                                             <textarea
                                               class="form-control"
                                               id="couponDescription"
                                               th:field="${couponForm.couponDescription}"
-                                              placeholder="Coupon description"
+                                              placeholder="Mô tả"
                                               th:class="${#fields.hasErrors('couponDescription')}? 'form-control fieldError' : 'form-control'"
                                               style="height: 150px;"
                                               maxlength="100"></textarea>
                                             <p th:if="${#fields.hasErrors('couponDescription')}" th:errors="*{couponDescription}" th:errorclass="errorMessage">
-                                                This entry is required
+                                                Đây là trường bắt buộc
                                             </p>
                                         </div>
 
-                                        <div class="d-flex justify-content-between">
+                                        <div class="d-flex justify-content-around">
                                             <div class="mb-3 mr-2">
-                                                <label class="form-label">Type Coupon</label>
+                                                <label class="form-label">Loại mã*</label>
                                                 <select class="form-select" th:field="${couponForm.typeCoupon}" id="couponType">
-                                                    <option value="DIRECT">Direct</option>
-                                                    <option value="PERCENT">Percent</option>
+                                                    <option value="DIRECT">Trực tiếp</option>
+                                                    <option value="PERCENT">Phần trăm</option>
                                                 </select>
                                             </div>
                                             <div class="mb-3 flex-grow-1 mx-2">
-                                                <label class="form-label" for="couponValue">Coupon Value</label>
+                                                <label class="form-label" for="couponValue">Giá trị*</label>
                                                 <input
                                                   type="number"
                                                   class="form-control"
                                                   id="couponValue"
                                                   th:field="${couponForm.couponValue}"
-                                                  placeholder="Discount value"
+                                                  placeholder="Giá trị"
                                                   th:class="${#fields.hasErrors('couponValue')}? 'form-control fieldError' : 'form-control'"/>
                                                 <p th:if="${#fields.hasErrors('couponValue')}" th:errors="*{couponValue}" th:errorclass="errorMessage">
-                                                    This entry is required
+                                                    Đây là trường bắt buộc
                                                 </p>
                                             </div>
 
                                             <div class="mb-3 flex-grow-1 ml-2">
-                                                <label class="form-label" for="couponQuantity">Coupon Quantity</label>
+                                                <label class="form-label" for="couponQuantity">Số lượng*</label>
                                                 <input type="number"
                                                        class="form-control"
                                                        id="couponQuantity"
                                                        th:field="${couponForm.couponQuantity}"
-                                                       placeholder="Coupon Quantity" th:class="${#fields.hasErrors('couponQuantity')}? 'form-control fieldError' : 'form-control'"/>
+                                                       placeholder="Số lượng" th:class="${#fields.hasErrors('couponQuantity')}? 'form-control fieldError' : 'form-control'"/>
                                                 <p th:if="${#fields.hasErrors('couponQuantity')}" th:errors="*{couponQuantity}" th:errorclass="errorMessage">
-                                                    This entry is required
+                                                    Đây là trường bắt buộc
                                                 </p>
                                             </div>
 
                                         </div>
-                                        <div class="d-flex justify-content-between">
+                                        <div class="d-flex justify-content-around">
                                             <div class="mb-3 flex-grow-1 mr-2 ">
-                                                <label class="form-label" for="datePicker-startDate">Start Date</label>
+                                                <label class="form-label" for="datePicker-startDate">Ngày bắt đầu*</label>
                                                 <input type="date"
                                                        class="form-control"
                                                        id="datePicker-startDate"
@@ -140,7 +139,7 @@
                                                        th:class="${#fields.hasErrors('startDate')}? 'form-control
                                                         fieldError' : 'form-control'"
                                                        readonly="readonly"/>
-                                                <p class="infoMessage">Date bound is not editable</p>
+                                                <p class="infoMessage">Không thể cập nhật trường này</p>
                                                 <script>
                                                     <!--start date min is today-->
                                                     document.getElementById("datePicker-startDate").min = new Date().toISOString().split('T')[0];
@@ -148,14 +147,14 @@
                                             </div>
 
                                             <div class="mb-3 flex-grow-1 mx-2">
-                                                <label class="form-label" for="datePicker-endDate">End Date</label>
+                                                <label class="form-label" for="datePicker-endDate">Ngày kết thúc*</label>
                                                 <input type="date"
                                                        class="form-control"
                                                        id="datePicker-endDate"
                                                        th:field="${couponForm.endDate}"
                                                        th:class="${#fields.hasErrors('endDate')}? 'form-control fieldError' : 'form-control'"
                                                        readonly="readonly"/>
-<!--                                                <p class="infoMessage">Date bound is not editable</p>-->
+                                                <p class="infoMessage">Không thể cập nhật trường này</p>
                                                 <script>
                                                     <!--end date min is today-->
                                                     document.getElementById("datePicker-endDate").min = new Date().toISOString().split('T')[0];
@@ -163,7 +162,7 @@
                                             </div>
 
                                         </div>
-                                        <button type="submit" class="btn btn-primary">Update</button>
+                                        <button type="submit" class="btn btn-primary">Cập nhật/button>
                                     </form>
                                 </div>
                             </div>
