--- a/src/main/resources/templates/admin/fragments/menu.html
+++ b/src/main/resources/templates/admin/fragments/menu.html
@@ -77,7 +77,7 @@
                     </a>
                 </li>
                 <li th:classappend="${value_menu.contains('couponCreate')?'active':''}" class="menu-item">
-                    <a th:href="@{/admin/coupon/new}" class="menu-link">
+                    <a th:href="@{/admin/coupon/create}" class="menu-link">
                         <div>Create new coupon</div>
                     </a>
                 </li>
