--- a/src/main/resources/templates/client/food_page.html
+++ b/src/main/resources/templates/client/food_page.html
@@ -37,6 +37,10 @@
                         <div th:insert="~{client/fragments/rating_list :: rating}"></div>
                         <p>Thời gian đợi: xxx Giờ đóng cửa: xxx</p>
                         <p>Giá: xxx</p>
+                        <th:block th:if="${userInfo}">
+                        <form th:action="@{/cart/add/1}" method="post">
+                            <button type="submit">Thêm vào giỏ hàng</button>
+                        </form></th:block>
                         <p class="my-3 content-res">
                             If you would like to discuss anything related to payment, account, licensing,
                             partnerships, or have pre-sales questions, you’re at the right place.
