--- a/src/main/resources/templates/admin/fragments/menu.html
+++ b/src/main/resources/templates/admin/fragments/menu.html
@@ -16,7 +16,28 @@
                 <span>Dashboard</span>
             </a>
         </li>
-
+        <!-- User -->
+        <li class="menu-header small text-uppercase">
+            <span class="menu-header-text">Blog</span>
+        </li>
+        <li th:classappend="${value_menu.contains('blogs')?'active open':''}" class="menu-item">
+            <a href="javascript:void(0)" class="menu-link menu-toggle">
+                <i class='menu-icon tf-icons bx bx-bookmark'></i>
+                <div>Blog</div>
+            </a>
+            <ul class="menu-sub">
+                <li th:classappend="${value_menu.contains('blog_list')?'active':''}" class="menu-item">
+                    <a th:href="@{/admin/blogs/list}" class="menu-link">
+                        <div>List blogs</div>
+                    </a>
+                </li>
+                <li th:classappend="${value_menu.contains('blog_create')?'active':''}" class="menu-item">
+                    <a th:href="@{/admin/blogs/create}" class="menu-link">
+                        <div>Create new blog</div>
+                    </a>
+                </li>
+            </ul>
+        </li>
         <!-- Ví dụ xử lý menu Restaurants -->
         <li class="menu-header small text-uppercase">
             <span class="menu-header-text">Restaurants</span>
