--- a/src/main/resources/templates/admin/fragments/menu.html
+++ b/src/main/resources/templates/admin/fragments/menu.html
@@ -27,13 +27,13 @@
                 <div>Restaurants</div>
             </a>
             <ul class="menu-sub">
-                <li th:classappend="${value_menu.contains('res_list')?'active':''}" class="menu-item">
-                    <a href="" class="menu-link">
+                <li th:classappend="${value_menu.contains('restaurants_list')?'active':''}" class="menu-item">
+                    <a th:href="@{/admin/restaurants/list}" class="menu-link">
                         <div>List restaurants</div>
                     </a>
                 </li>
-                <li class="menu-item">
-                    <a href="" class="menu-link">
+                <li th:classappend="${value_menu.contains('restaurants_create')?'active':''}" class="menu-item">
+                    <a th:href="@{/admin/restaurants/create}" class="menu-link">
                         <div>Create new restaurant</div>
                     </a>
                 </li>
